# memory-socket

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: async.rs  lib.rs
tests/: async.rs  sync.rs
